add_library(slinklist slinklist.c)
message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
#if (BUILD_SHARED_LIBS STREQUAL "ON")
if (BUILD_SHARED_LIBS)
    message(STATUS "Dynamic library")
    set_target_properties(slinklist PROPERTIES VERSION 1.0 SOVERSION 1)
    install(TARGETS slinklist LIBRARY DESTINATION lib)
else()
    message(STATUS "Static library")
    install(TARGETS slinklist ARCHIVE DESTINATION lib)
endif()
install(FILES slinklist.h DESTINATION include)
