add_library(sqlist sqlist.c)
message(STATUS "BUILD_SHARED_LIBS: ${BUILD_SHARED_LIBS}")
#if (BUILD_SHARED_LIBS STREQUAL "ON")
if (BUILD_SHARED_LIBS)
    message(STATUS "Dynamic library")
    set_target_properties(sqlist PROPERTIES VERSION 1.0 SOVERSION 1)
    install(TARGETS sqlist LIBRARY DESTINATION lib)
else()
    message(STATUS "Static library")
    install(TARGETS sqlist ARCHIVE DESTINATION lib)
endif()
install(FILES sqlist.h DESTINATION include)
